--- a/service/index.html
+++ b/service/index.html
@@ -252,7 +252,7 @@
     <script>
         async function handleSubmit() {
             const inputText = document.getElementById('inputText').value;
-            const response = await fetch('http://127.0.0.1:8001/process_text/', {
+            const response = await fetch('http://127.0.0.1:8000/predict', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
